--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -349,6 +349,7 @@
                     <connections>
                         <outlet property="moreButton" destination="kNA-WJ-NA0" id="oze-F2-pCZ"/>
                         <outlet property="noDevicesLabel" destination="HSb-Q2-MhK" id="sYp-yb-Dya"/>
+                        <outlet property="searchBar" destination="fPe-UK-gb5" id="3fU-9k-grf"/>
                         <outlet property="setupNewDeviceButton" destination="4Cw-AT-ACb" id="by9-6y-6rD"/>
                         <outlet property="tableView" destination="l8r-gu-33x" id="12r-M7-uSW"/>
                         <outlet property="titleLabel" destination="D7w-cb-MbB" id="4fR-AE-qnH"/>
