--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -730,7 +730,7 @@
                                     <constraint firstAttribute="height" constant="10" id="Ry1-c5-CcT"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xo0-Cy-fNp" userLabel="Setup new device" customClass="FiltersButton" customModule="Particle" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" selected="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xo0-Cy-fNp" userLabel="Setup new device" customClass="FiltersButton" customModule="Particle" customModuleProvider="target">
                                 <rect key="frame" x="280" y="70.5" width="32" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="32" id="Z2B-gG-U5g"/>
